--- a/lab03/task2/app/src/main/AndroidManifest.xml
+++ b/lab03/task2/app/src/main/AndroidManifest.xml
@@ -10,17 +10,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Task2">
         <activity
-            android:name=".FirstActivity"
-            android:exported="true">
+            android:name=".MainActivity"
+            android:exported="true" android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SecondActivity" android:exported="true"/>
-        <activity android:name=".ThirdActivity" android:exported="true"/>
-        <activity android:name=".AboutActivity" android:exported="true"/>
+        <activity android:name=".SecondActivity" android:exported="true" android:launchMode="singleInstance"/>
+        <activity android:name=".ThirdActivity" android:exported="true" android:launchMode="singleInstance"/>
+        <activity android:name=".AboutActivity" android:exported="true" android:launchMode="singleInstance"/>
     </application>
 
 </manifest>
